# Dashboard_Ecommerce_with_Flask

./: .gitignore  README.md  config.py  makefile  prospector.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: continuous_integration.yml
app/: __init__.py  login_manager.py
app/clientes/: controllers.py  forms.py  mail_token.py  models.py  send_email.py  token_confirm_email.py  token_recovery_account.py  token_recovery_password.py  user_loader.py
app/conta/: controllers.py  models.py
app/controllers/: default.py
app/home/: controller.py
app/minha_conta/: controllers.py  models.py
app/models/: tables.py
app/static/: style.css
app/static/clientes/: login-register.css
app/static/home/: home.css
app/static/produtos/: leitor_barcode.js
app/static/produtos/barcode/: example.css
app/templates/: 404.html  base.html  index.html  topbar_home.html
app/templates/bases/: base.html  base_login.html
app/templates/clientes/: alterar_senha.html  confirm_email.html  login.html  perfil.html  recovery_password.html  recuperar_conta.html  recuperar_senha.html  register.html
app/templates/components/: footer.html  sidebar.html  topbar.html
app/templates/minha_conta/: meus_pedidos.html
test/: conftest.py
tests/: conftest.py
tests/cliente/: test_rotas.py
tests/clientes/: test_links_static.py  test_redirects.py  test_rotas.py
tests/conta/: test_rotas.py
