[tool.poetry]
name = "webapplication_with_flask"
version = "0.1.0"
description = ""
authors = ["Osmar Pereira <bibliotecaosmar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
prospector = "^1.7.7"
pip-audit = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
