[tool.poetry]
name = "webapplication_with_flask"
version = "0.1.0"
description = ""
authors = ["Osmar Pereira <bibliotecaosmar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-Login = "^0.5.0"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
SQLAlchemy-Utils = "^0.38.2"
Flask-Mail = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
prospector = "^1.7.7"
pip-audit = "^2.1.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
